fix: disable display overflow

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
     font-size: 42px;
     border-radius: 12px;
     box-shadow: 5px 5px 10px black;
+    overflow-y: hidden;
 }
 
 .buttons-container, .buttons {
